--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <title>Connyr Aungst — Cybersecurity Portfolio</title>
 <meta content="Hands-on cybersecurity projects with screenshots, write-ups, and downloadable PDFs." name="description"/>
 <link href="favicon.jpg" rel="icon"/>
-<link href="style.css?v=6.8" rel="stylesheet"/>
-<script defer="" src="app.js?v=6.8"></script>
+<link href="style.css?v=6.10" rel="stylesheet"/>
+<script defer="" src="app.js?v=6.10"></script>
 </head>
 <body>
 <header class="topbar">
@@ -122,9 +122,9 @@
 <h2>About Me</h2>
 <div class="about-card" style="display:grid;grid-template-columns:auto 1fr;gap:clamp(6px,0.8vw,12px);align-items:start;">
 <picture class="about-photo" style="display:block;width:clamp(312px,36%,384px);aspect-ratio:7/6;max-height:clamp(284px,43vh,567px);overflow:hidden;border-radius:16px;margin:0;">
-<source srcset="assets/images/about-photo.webp 1x, assets/images/about-photo@2x.webp 2x" type="image/webp"/>
-<img alt="About photo" loading="lazy" src="assets/images/about-photo.png" style="display:block;width:100%;height:100%;object-fit:cover;object-position:50% 50%;"/>
-</picture>
+<source srcset="assets/images/about-photo.webp 1x, assets/images/about-photo@2x.webp 2x" type="image/webp">
+<img alt="About photo" loading="lazy" src="assets/images/about-photo.png" style="display:block;width:100%;height:100%;object-fit:cover;object-position:50% 50%;">
+</img></source></picture>
 <div class="about-body">
 <p>Detail-oriented and driven aspiring IT professional with experience in systems administration and property/asset management in Healthcare and Real Estate settings, currently pursuing a B.S. in Cybersecurity. Skilled in network troubleshooting, system hardening, and risk assessment. Seeking to leverage hands-on IT experience and formal security training to support enterprise information security initiatives. Outside of my prior work history and passion for IT, Cybersecurity, and technology in general, I enjoy traveling domestically and abroad, staying active in the gym, playing ice hockey when I get the chance (although much less frequently than I did growing up), and spending time with family and friends in whatever ways I can.</p>
 </div>
@@ -134,54 +134,14 @@
 <h2>Certifications</h2>
 <div class="grid" id="certifications"></div>
 </section>
-<section class="section" id="general"><h2>General Projects</h2><div class="grid" id="projects-general"><article class="card project" id="gen-card-0">
-<div class="project-inner">
-<div class="project-image">
-<img alt="Portfolio Website (Netlify + Cloudflare) image" loading="lazy" src="./assets/images/projects/placeholder-project.webp"/>
-</div>
-<div class="project-summary">
-<h3>Portfolio Website (Netlify + Cloudflare)</h3>
-<p>This site: static frontend deployed on Netlify with Cloudflare for DNS/TLS/WAF/caching. Includes rate limiting, managed challenge on PDF endpoints, strict security headers, and a Netlify function that surfaces Cloudflare analytics.</p>
-</div>
-<div class="project-tags"><span class="pill" style="background:#7bdff222;border-color:#7bdff244;color:#7bdff2">Web</span> <span class="pill" style="background:#b2f7ef22;border-color:#b2f7ef44;color:#b2f7ef">HTML</span> <span class="pill" style="background:#eff7f622;border-color:#eff7f644;color:#eff7f6">CSS</span> <span class="pill" style="background:#f7d6e022;border-color:#f7d6e044;color:#f7d6e0">JavaScript</span> <span class="pill" style="background:#f2b5d422;border-color:#f2b5d444;color:#f2b5d4">Netlify</span> <span class="pill" style="background:#cdb4db22;border-color:#cdb4db44;color:#cdb4db">Cloudflare</span> <span class="pill" style="background:#ffc8dd22;border-color:#ffc8dd44;color:#ffc8dd">DNS</span> <span class="pill" style="background:#ffafcc22;border-color:#ffafcc44;color:#ffafcc">WAF</span> <span class="pill" style="background:#bde0fe22;border-color:#bde0fe44;color:#bde0fe">TLS</span> <span class="pill" style="background:#a2d2ff22;border-color:#a2d2ff44;color:#a2d2ff">CI/CD</span></div>
-</div>
-</article><article class="card project" id="gen-card-1">
-<div class="project-inner">
-<div class="project-image">
-<img alt="Custom PC Build image" loading="lazy" src="./assets/images/projects/pc-build.webp"/>
-</div>
-<div class="project-summary">
-<h3>Custom PC Build</h3>
-<p>Workstation PC planning and build. UEFI configuration with Secure Boot and TPM enabled, BitLocker full-disk encryption, thermal validation, and clean OS with driver hardening.</p>
-</div>
-<div class="project-tags"><span class="pill" style="background:#7bdff222;border-color:#7bdff244;color:#7bdff2">Hardware</span> <span class="pill" style="background:#b2f7ef22;border-color:#b2f7ef44;color:#b2f7ef">PC Build</span> <span class="pill" style="background:#eff7f622;border-color:#eff7f644;color:#eff7f6">Windows</span> <span class="pill" style="background:#f7d6e022;border-color:#f7d6e044;color:#f7d6e0">UEFI</span> <span class="pill" style="background:#f2b5d422;border-color:#f2b5d444;color:#f2b5d4">Secure Boot</span> <span class="pill" style="background:#cdb4db22;border-color:#cdb4db44;color:#cdb4db">TPM</span> <span class="pill" style="background:#ffc8dd22;border-color:#ffc8dd44;color:#ffc8dd">Misc</span></div>
-</div>
-</article></div><div class="error" id="projects-general-error"></div></section>
+<section class="section" id="general">
+<h2>General Projects</h2>
+<div class="grid" id="projects-general"></div>
+<div class="error" id="projects-general-error"></div>
+</section>
 <section class="section" id="security">
 <h2>Security Projects</h2>
-<div class="grid" id="projects-security"><article class="card project" id="sec-card-0">
-<div class="project-inner">
-<div class="project-image">
-<img alt="CTF Lab: Web Exploitation image" loading="lazy" src="./assets/images/projects/placeholder-project.webp"/>
-</div>
-<div class="project-summary">
-<h3>CTF Lab: Web Exploitation</h3>
-<p>Small DVWA/juice-shop styled lab for practicing input validation, auth bypass and IDOR.</p>
-</div>
-<div class="project-tags"><span class="pill" style="background:#ffafcc22;border-color:#ffafcc44;color:#ffafcc">Security — Offense</span> <span class="pill" style="background:#7bdff222;border-color:#7bdff244;color:#7bdff2">Web</span> <span class="pill" style="background:#bde0fe22;border-color:#bde0fe44;color:#bde0fe">Scripting</span> <span class="pill" style="background:#ffc8dd22;border-color:#ffc8dd44;color:#ffc8dd">Misc</span></div>
-</div>
-</article><article class="card project" id="sec-card-1">
-<div class="project-inner">
-<div class="project-image">
-<img alt="Blue Team: SIEM + WAF Detections image" loading="lazy" src="./assets/images/projects/placeholder-project.webp"/>
-</div>
-<div class="project-summary">
-<h3>Blue Team: SIEM + WAF Detections</h3>
-<p>Created Sigma-style detection rules and WAF rules to detect/mitigate common web attacks.</p>
-</div>
-<div class="project-tags"><span class="pill" style="background:#a2d2ff22;border-color:#a2d2ff44;color:#a2d2ff">Security — Defense</span> <span class="pill" style="background:#cdb4db22;border-color:#cdb4db44;color:#cdb4db">Cloudflare</span> <span class="pill" style="background:#ffafcc22;border-color:#ffafcc44;color:#ffafcc">WAF</span> <span class="pill" style="background:#7bdff222;border-color:#7bdff244;color:#7bdff2">Tooling/DevOps</span></div>
-</div>
-</article></div>
+<div class="grid" id="projects-security"></div>
 </section>
 <footer class="footer" id="contact">
 <p>© <span id="year"></span> Connyr Aungst · <a href="mailto:you@connyraungst.com">you@connyraungst.com</a> · <a href="https://www.linkedin.com/in/connyr-aungst" rel="noopener" target="_blank">LinkedIn</a> · <a href="https://github.com/connyraungst" rel="noopener" target="_blank">GitHub</a></p>
